--- a/package.json
+++ b/package.json
@@ -1,34 +1,31 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "build": "vite build",
-        "dev": "vite",
-        "prod": "vite build"
-    },
-    "devDependencies": {
-        "@popperjs/core": "^2.11.6",
-        "@tailwindcss/vite": "^4.0.0",
-        "autoprefixer": "^10.4.21",
-        "axios": "^1.7.4",
-        "bootstrap": "^5.2.3",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.5.6",
-        "sass": "^1.85.1",
-        "sass-loader": "^16.0.5",
-        "tailwindcss": "^4.1.13",
-        "vite": "^6.0.11"
-    },
-    "dependencies": {
-        "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.3",
-        "express": "^5.1.0",
-<<<<<<< HEAD
-        "socket.io": "^4.8.1"
-=======
-        "socket.io": "^4.8.1",
-        "socket.io-client": "^4.8.1"
->>>>>>> 9f85850690eb7d4153c67133167936168a2b612b
-    }
+  "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=18"
+  },
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite",
+    "prod": "vite build"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.0.0",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "^9.0.1",
+    "laravel-vite-plugin": "^1.2.0",
+    "postcss": "^8.5.6",
+    "sass": "^1.85.1",
+    "sass-loader": "^16.0.5",
+    "tailwindcss": "^4.1.13",
+    "vite": "^6.0.11"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
+  }
 }
