--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "type": "module",
-  "engines": {
-    "node": ">=18"
-  },
+ "engines": {
+  "node": ">=18 <19"
+},
   "scripts": {
     "build": "vite build",
     "dev": "vite",
