--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -5,11 +5,13 @@
     "node": ">=18 <19"
   },
   "scripts": {
+    "preinstall": "npm install --include=optional",
     "build": "vite build",
     "dev": "vite",
     "prod": "vite build"
   },
   "devDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.9.0",
     "@tailwindcss/vite": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "concurrently": "^9.0.1",
@@ -18,7 +20,7 @@
     "sass": "^1.85.1",
     "sass-loader": "^16.0.5",
     "tailwindcss": "^4.1.13",
-    "vite": "^5.4.0"
+    "vite": "^5.0.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
