fix: resolve rollup dependency issue

--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -2,10 +2,9 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": ">=18 <19"
+    "node": ">=18"
   },
   "scripts": {
-    "preinstall": "npm install --include=optional",
     "build": "vite build",
     "dev": "vite",
     "prod": "vite build"
